Tipos, operadores, control de flujo, ejercicios esta completado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     Hola Mundo
     ><!-- Es mejor poner las etiquetas de scriptal final del codigo de hatml o del body para funcione bien la app -->
-    <script src="03-control-flujo/02-else.js"></script><!--  el src y el app.js lo coloque por el nuevo archic¿vo que hice de app.js y esta funcionando bien -->
+    <script src="05-objetos/01-intro.js"></script><!--  el src y el app.js lo coloque por el nuevo archic¿vo que hice de app.js y esta funcionando bien -->
     
 </body>
 </html>
